Fix `Last subchild isn't visible in a long hierarchy` for Chrome, Safari, Opera and Yandex #119

--- a/src/less/plugins/inheritance.less
+++ b/src/less/plugins/inheritance.less
@@ -23,6 +23,16 @@
       & > &-list {
         overflow: auto;
         overflow-y: hidden;
+
+        &::-webkit-scrollbar {
+          -webkit-appearance: none;
+          height: 8px;
+        }
+        &::-webkit-scrollbar-thumb {
+          border-radius: 4px;
+          background-color: rgba(0, 0, 0, 0.5);
+          -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+        }
       }
       &-item {
         position: relative;
